# harness-binding-constraint

./: .gitignore  README.md  index.html
code/: .gitignore  LICENSE  README.md  pyproject.toml
code/configs/: models.example.toml  models.toml
code/configs/harnesses/: h1_minimal.toml  h2_improved.toml  h3_full.toml
code/configs/task_subsets/: DATA.md  subset_100.json
code/scripts/: 01_download_dataset.py  process_paper_results.py
code/src/evalharness/: __init__.py  cli.py  core.py  docker_runtime.py  experiment.py  runtime.py  swebench.py  utils.py
code/src/evalharness/harnesses/: __init__.py  h1_minimal.py  h2_improved.py  h3_full.py
code/src/evalharness/models/: __init__.py  http.py  kimi_api.py  loader.py  openai_api.py  zai_api.py
